created app with database, migrations, UI, back-end controllers

--- a/EmployeesApp/EmployeesApp.csproj
+++ b/EmployeesApp/EmployeesApp.csproj
@@ -24,6 +24,20 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="ClientApp\src\app\models\dialog-data.ts" />
+    <None Remove="ClientApp\src\app\models\employee.ts" />
+    <None Remove="ClientApp\src\app\models\job.ts" />
+    <None Remove="ClientApp\src\app\services\api.service.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\models\dialog-data.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\employee.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\models\job.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\services\api.service.ts" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
