--- a/EmployeesApp/appsettings.json
+++ b/EmployeesApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "EmployeeConnection": "Server=(localdb)\\mssqllocaldb;Database=employeesdb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
